# bernini

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AS_GBuffer.hlsl  CLAUDE.md  CMakeLists.txt  CMakePresets.json  MS_GBuffer.hlsl  Mesh Editor.md  README.md  RESOURCES.md  ROADMAP.md  STYLE.md  TODO.md  justfile  vcpkg.json
Bernini/: CMakeLists.txt
Bernini/cmake/: headerlist.cmake  sourcelist.cmake
Bernini/shaders/: VertexShader_Empty.hlsl
Bernini/src/: bernini.cpp
Core/: CMakeLists.txt
Core/cmake/: headerlist.cmake  sourcelist.cmake
Core/include/Core/: pch.h
Core/src/file/: file.cpp
Core/src/str/: str.cpp
Core/src/win/: IWindowEvent.cpp  KeyEvent.cpp  MouseEvent.cpp  Window.cpp  pch.cpp
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Game/: CMakeLists.txt
Game/src/: GfxHandle.cpp  GfxHandle.h  main.cpp
Gfx/src/dx11/: CMakeLists.txt  DXError.cpp  DXError.h  Graphics_dx11.cpp  Renderer_dx11.cpp  pch.h
Gfx/src/dx12/: CMakeLists.txt  DXError.h  Graphics_dx12.cpp  ShaderInput_dx12.cpp  pch.h
RHI/: CMakeLists.txt
RHI/include/rhi/: IDevice.h  IResource.h  RefCounter.h  ResourceHandle.h  rhi.h
RHI/src/dx11/: CMakeLists.txt  DXError.cpp  Device.cpp  Device.h  dx_pch.h
Renderer/src/dx11/: CMakeLists.txt  DXError.cpp  DXError.h  DXRenderer.cpp  DXRenderer.h  IRenderer.cpp  Renderer.cpp  Renderer.h  dx_pch.h
apps/editor/: CLAUDE.md  CMakeLists.txt  config.example.json
apps/editor/qt/: MainWindow.ui
apps/editor/scripts/: add_qt_class.py
apps/editor/src/: MainWindow.cpp  MainWindow.h  main.cpp  pch.h
apps/editor/tests/: CMakeLists.txt
bgl/: CLAUDE.md  CMakeLists.txt
bgl/idl/: .clang-format  CMakelists.txt  LANGUAGE.md  idlgen.cpp
bgl/idl/src/: CMakelists.txt  Constants.slang  DispatchArgs.slang  Entry.slang  IGeom.slang  IMaterial.slang  IMeshInstance.slang  Mesh.slang  Meshlet.slang  Range.slang  StaticMesh.slang  Vertex.slang  VertexLayout.slang
bgl/include/bgl/: Graphics.h  IGraphics.h  IRenderTarget.h  IScene.h  ISceneView.h  LayerType.h  MaterialType.h  PsoType.h  RenderContext.h  bgl.h  util.h
bgl/shaders/: CMakeLists.txt
bgl/shaders/src/: CompactInstances.slang  Forward_Assert.slang  Forward_PBR.slang  Forward_StaticMesh.slang  FullscreenRect.slang  GBuffer_PBR.slang  GBuffer_StaticMesh.slang  HistogramInstances.slang  MSTest.slang  PSTest.slang  PrefixSumInstances.slang  Test.ps.slang  Test.vs.slang  VSTest.slang
bgl/shaders/tests/: CSDbgRaiseTest.slang  MSUniformReflectionScalar.slang  VSUniformReflectionScalar.slang
bgl/src/: pch.h
bgl/src/cmd/: CommandAllocator.h  CommandList.h  CommandQueue.h
bgl/src/constants/: constants.h
bgl/src/d3d12/: CMakeLists.txt  ErrorChecker.cpp  ErrorChecker.h  Graphics_d3d12.cpp  RenderTarget_d3d12.cpp  pch.h  util.cpp  util.h  util_d3d12.cpp  util_d3d12.h
bgl/src/db/: BaseInstance.h  Entry.h  Meshlet.h  Range.h  StaticMesh.h  Vertex.h  db.h
bgl/src/debug/: DebugBuffer.h
bgl/src/device/: Device.cpp  Device.h
bgl/src/error/: gassert.h
bgl/src/fg/: FrameGraph.cpp  FrameGraph.h  PassDesc.h
bgl/src/gfx/: Graphics.cpp  GraphicsBase.h
bgl/src/idl/: Constants.h  Entry.h  Meshlet.h  Range.h  RangeWithCount.h  StaticMesh.h  Vertex.h  idl.h
bgl/src/passes/: ClearPass.h  CompactInstancesPass.cpp  CompactInstancesPass.h  CopyPass.h  DrawData.h  ForwardPass.cpp  ForwardPass.h  GBuffer.h  GBufferPass.cpp  GBufferPass.h  PreparePresentPass.h  Test.h
bgl/src/pipeline/: ComputeKernel.h  ComputePipeline.h  GraphicsPipeline.h  MeshletKernel.h  MeshletPipeline.h
bgl/src/resource/: Buffer.h  Dsv.h  FrameBuffer.h  Readback.h  ResourceManager.h  Rtv.h  Shader.h  Texture.h
bgl/src/scene/: ComputeBuffer.cpp  ComputeBuffer.h  EntryBuffer.h  PackedBuffer.h  RangeBuffer.h  Scene.cpp  Scene.h  SceneView.cpp  SceneView.h
bgl/src/slang/: ErrorChecker.cpp  ErrorChecker.h
bgl/src/types/: Barrier.h  BaseInstance.h  BlendState.h  ClearValue.h  Color.h  ComputeState.h  CpuAccessMode.h  DepthStencilState.h  ElementType.h  FormatInfo.h  GraphicsState.h  MeshletState.h  QueueType.h  Rect.h  RenderState.h  Viewport.h
bgl/src/uniforms/: Uniforms.cpp  Uniforms.h
bgl/src/util/: util.cpp  util.h
bgl/tests/golden/: cube.exp.dds  two_cubes.exp.dds
bgl/tests/src/: DebugAssert_test.cpp  Entry_test.cpp  Error_test.cpp  FrameGraph_test.cpp  HistogramInstances_test.cpp  MeshDelete_test.cpp  Packed_test.cpp  Range_test.cpp  Readback_test.cpp  RenderGeometry.cpp  Resize_test.cpp  Uniforms_test.cpp
core/: CMakeLists.txt
core/include/core/: EnumSet.h  OrderedMap.h  ScopeGuard.h  math.h  type_traits.h
core/src/: file.cpp  str.cpp
core/src/err/: util.cpp
core/src/platform/: KeyEvent.cpp
core/src/win/: CharEvent.cpp  KeyEvent.cpp  MouseEvent.cpp  Window.cpp
core/src/win32/: Platform_win32.cpp  Win32Util.cpp  Win32Util.h  WinAPI.h  Window_win32.cpp  file.cpp  str.cpp  util.cpp  util.h
editor/: CLAUDE.md  CMakeLists.txt
editor/qt/: MainWindow.ui
editor/scripts/: add_qt_class.py
editor/src/: MainWindow.cpp  MainWindow.h
editor/src/Project/: Project.cpp  Project.h
examples/: CLAUDE.md  CMakeLists.txt
examples/bgl_base/: CMakeLists.txt
examples/bgl_base/src/: main.cpp
examples/bgl_gpu_assert/: CMakeLists.txt
examples/bgl_gpu_assert/src/: main.cpp
examples/bgl_sphere/: CMakeLists.txt
examples/bgl_sphere/src/: main.cpp
examples/bgl_two_windows/: CMakeLists.txt
examples/bgl_two_windows/src/: main.cpp
examples/bgl_window/: CMakeLists.txt
examples/bgl_window/src/: main.cpp
examples/materials/: CMakeLists.txt
examples/materials/src/: main.cpp
examples/mesh_create_update/: CMakeLists.txt
examples/nvrhi_d3d12_example/: CMakeLists.txt
examples/static_mesh_crud/: CMakeLists.txt
examples/util/: CMakeLists.txt  DemoWindow.cpp  DemoWindow.h  FlyCamera.cpp  FlyCamera.h
gfxsdk_cxx/: CMakeLists.txt
gfxsdk_cxx/src/: GfxHandle.cpp  Vec3.cpp
libs/assetlib/: CLAUDE.md  CMakeLists.txt
libs/assetlib_structs/: CMakeLists.txt
libs/bgl/: CLAUDE.md  CMakeLists.txt
libs/bgl/src/: pch.h
libs/core/: CLAUDE.md  CMakeLists.txt
libs/gamelib/: CLAUDE.md  CMakeLists.txt
(+993 files in other folders)
